--- a/references/afh.yml
+++ b/references/afh.yml
@@ -1,338 +1,338 @@
-- slug: AFH
-  title: Airplane Flying Handbook
-  url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/airplane_handbook/media/airplane_flying_handbook.pdf'
-  sections:
-    - 1-1#15
-    - 1-2#16
-    - 1-3#17
-    - 1-4#18
-    - 1-5#19
-    - 1-6#20
-    - 1-7#21
-    - 1-8#22
-    - 1-9#23
-    - 1-10#24
-    - 1-11#25
-    - 1-12#26
-    - 1-13#27
-    - 1-14#28
-    - 1-15#29
-    - 1-16#30
-    - 2-1#31
-    - 2-2#32
-    - 2-3#33
-    - 2-4#34
-    - 2-5#35
-    - 2-6#36
-    - 2-7#37
-    - 2-8#38
-    - 2-9#39
-    - 2-10#40
-    - 2-11#41
-    - 2-12#42
-    - 2-13#43
-    - 2-14#44
-    - 2-15#45
-    - 2-16#46
-    - 2-17#47
-    - 2-18#48
-    - 2-19#49
-    - 2-20#50
-    - 3-1#51
-    - 3-2#52
-    - 3-3#53
-    - 3-4#54
-    - 3-5#55
-    - 3-6#56
-    - 3-7#57
-    - 3-8#58
-    - 3-9#59
-    - 3-10#60
-    - 3-11#61
-    - 3-12#62
-    - 3-13#63
-    - 3-14#64
-    - 3-15#65
-    - 3-16#66
-    - 3-17#67
-    - 3-18#68
-    - 3-19#69
-    - 3-20#70
-    - 3-21#71
-    - 3-22#72
-    - 3-23#73
-    - 3-24#74
-    - 4-1#75
-    - 4-2#76
-    - 4-3#77
-    - 4-4#78
-    - 4-5#79
-    - 4-6#80
-    - 4-7#81
-    - 4-8#82
-    - 4-9#83
-    - 4-10#84
-    - 4-11#85
-    - 4-12#86
-    - 4-13#87
-    - 4-14#88
-    - 4-15#89
-    - 4-16#90
-    - 4-17#91
-    - 4-18#92
-    - 4-19#93
-    - 4-20#94
-    - 4-21#95
-    - 4-22#96
-    - 4-23#97
-    - 4-24#98
-    - 5-1#99
-    - 5-2#100
-    - 5-3#101
-    - 5-4#102
-    - 5-5#103
-    - 5-6#104
-    - 5-7#105
-    - 5-8#106
-    - 5-9#107
-    - 5-10#108
-    - 5-11#109
-    - 5-12#110
-    - 5-13#111
-    - 5-14#112
-    - 6-1#113
-    - 6-2#114
-    - 6-3#115
-    - 6-4#116
-    - 6-5#117
-    - 6-6#118
-    - 6-7#119
-    - 6-8#120
-    - 6-9#121
-    - 6-10#122
-    - 6-11#123
-    - 6-12#124
-    - 6-13#125
-    - 6-14#126
-    - 6-15#127
-    - 6-16#128
-    - 6-17#129
-    - 6-18#130
-    - 7-1#131
-    - 7-2#132
-    - 7-3#133
-    - 7-4#134
-    - 7-5#135
-    - 7-6#136
-    - 8-1#137
-    - 8-2#138
-    - 8-3#139
-    - 8-4#140
-    - 8-5#141
-    - 8-6#142
-    - 8-7#143
-    - 8-8#144
-    - 8-9#145
-    - 8-10#146
-    - 8-11#147
-    - 8-12#148
-    - 8-13#149
-    - 8-14#150
-    - 8-15#151
-    - 8-16#152
-    - 8-17#153
-    - 8-18#154
-    - 8-19#155
-    - 8-20#156
-    - 8-21#157
-    - 8-22#158
-    - 8-23#159
-    - 8-24#160
-    - 8-25#161
-    - 8-26#162
-    - 8-27#163
-    - 8-28#164
-    - 8-29#165
-    - 8-30#166
-    - 8-31#167
-    - 8-32#168
-    - 8-33#169
-    - 8-34#170
-    - 8-35#171
-    - 8-36#172
-    - 9-1#173
-    - 9-2#174
-    - 9-3#175
-    - 9-4#176
-    - 9-5#177
-    - 9-6#178
-    - 9-7#179
-    - 9-8#180
-    - 10-1#181
-    - 10-2#182
-    - 10-3#183
-    - 10-4#184
-    - 10-5#185
-    - 10-6#186
-    - 10-7#187
-    - 10-8#188
-    - 10-9#189
-    - 10-10#190
-    - 11-1#191
-    - 11-2#192
-    - 11-3#193
-    - 11-4#194
-    - 11-5#195
-    - 11-6#196
-    - 11-7#197
-    - 11-8#198
-    - 11-9#199
-    - 11-10#200
-    - 11-11#201
-    - 11-12#202
-    - 11-13#203
-    - 11-14#204
-    - 11-15#205
-    - 11-16#206
-    - 11-17#207
-    - 11-18#208
-    - 12-1#209
-    - 12-2#210
-    - 12-3#211
-    - 12-4#212
-    - 12-5#213
-    - 12-6#214
-    - 12-7#215
-    - 12-8#216
-    - 12-9#217
-    - 12-10#218
-    - 12-11#219
-    - 12-12#220
-    - 12-13#221
-    - 12-14#222
-    - 12-15#223
-    - 12-16#224
-    - 12-17#225
-    - 12-18#226
-    - 12-19#227
-    - 12-20#228
-    - 12-21#229
-    - 12-22#230
-    - 12-23#231
-    - 12-24#232
-    - 12-25#233
-    - 12-26#234
-    - 12-27#235
-    - 12-28#236
-    - 13-1#237
-    - 13-2#238
-    - 13-3#239
-    - 13-4#240
-    - 13-5#241
-    - 13-6#242
-    - 13-7#243
-    - 13-8#244
-    - 14-1#245
-    - 14-2#246
-    - 14-3#247
-    - 14-4#248
-    - 14-5#249
-    - 14-6#250
-    - 14-7#251
-    - 14-8#252
-    - 14-9#253
-    - 14-10#254
-    - 14-11#255
-    - 14-12#256
-    - 14-13#257
-    - 14-14#258
-    - 15-1#259
-    - 15-2#260
-    - 15-3#261
-    - 15-4#262
-    - 15-5#263
-    - 15-6#264
-    - 15-7#265
-    - 15-8#266
-    - 15-9#267
-    - 15-10#268
-    - 15-11#269
-    - 15-12#270
-    - 15-13#271
-    - 15-14#272
-    - 15-15#273
-    - 15-16#274
-    - 15-17#275
-    - 15-18#276
-    - 15-19#277
-    - 15-20#278
-    - 15-21#279
-    - 15-22#280
-    - 15-23#281
-    - 15-24#282
-    - 15-25#283
-    - 15-26#284
-    - 15-27#285
-    - 15-28#286
-    - 15-29#287
-    - 15-30#288
-    - 15-31#289
-    - 15-32#290
-    - 16-1#291
-    - 16-2#292
-    - 16-3#293
-    - 16-4#294
-    - 16-5#295
-    - 16-6#296
-    - 16-7#297
-    - 16-8#298
-    - 16-9#299
-    - 16-10#300
-    - 16-11#301
-    - 16-12#302
-    - 16-13#303
-    - 16-14#304
-    - 17-1#305
-    - 17-2#306
-    - 17-3#307
-    - 17-4#308
-    - 17-5#309
-    - 17-6#310
-    - 17-7#311
-    - 17-8#312
-    - 17-9#313
-    - 17-10#314
-    - 17-11#315
-    - 17-12#316
-    - 17-13#317
-    - 17-14#318
-    - 17-15#319
-    - 17-16#320
-    - 17-17#321
-    - 17-18#322
-    - G-1#323
-    - G-2#324
-    - G-3#325
-    - G-4#326
-    - G-5#327
-    - G-6#328
-    - G-7#329
-    - G-8#330
-    - G-9#331
-    - G-10#332
-    - G-11#333
-    - G-12#334
-    - G-13#335
-    - G-14#336
-    - G-15#337
-    - G-16#338
-    - G-17#339
-    - G-18#340
-    - G-19#341
-    - G-20#342
-    - I-1#343
-    - I-2#344
-    - I-3#345
-    - I-4#346
-    - I-5#347
-    - I-6#348
+slug: afh
+title: Airplane Flying Handbook
+url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/airplane_handbook/media/airplane_flying_handbook.pdf'
+sections:
+  - 1-1#15
+  - 1-2#16
+  - 1-3#17
+  - 1-4#18
+  - 1-5#19
+  - 1-6#20
+  - 1-7#21
+  - 1-8#22
+  - 1-9#23
+  - 1-10#24
+  - 1-11#25
+  - 1-12#26
+  - 1-13#27
+  - 1-14#28
+  - 1-15#29
+  - 1-16#30
+  - 2-1#31
+  - 2-2#32
+  - 2-3#33
+  - 2-4#34
+  - 2-5#35
+  - 2-6#36
+  - 2-7#37
+  - 2-8#38
+  - 2-9#39
+  - 2-10#40
+  - 2-11#41
+  - 2-12#42
+  - 2-13#43
+  - 2-14#44
+  - 2-15#45
+  - 2-16#46
+  - 2-17#47
+  - 2-18#48
+  - 2-19#49
+  - 2-20#50
+  - 3-1#51
+  - 3-2#52
+  - 3-3#53
+  - 3-4#54
+  - 3-5#55
+  - 3-6#56
+  - 3-7#57
+  - 3-8#58
+  - 3-9#59
+  - 3-10#60
+  - 3-11#61
+  - 3-12#62
+  - 3-13#63
+  - 3-14#64
+  - 3-15#65
+  - 3-16#66
+  - 3-17#67
+  - 3-18#68
+  - 3-19#69
+  - 3-20#70
+  - 3-21#71
+  - 3-22#72
+  - 3-23#73
+  - 3-24#74
+  - 4-1#75
+  - 4-2#76
+  - 4-3#77
+  - 4-4#78
+  - 4-5#79
+  - 4-6#80
+  - 4-7#81
+  - 4-8#82
+  - 4-9#83
+  - 4-10#84
+  - 4-11#85
+  - 4-12#86
+  - 4-13#87
+  - 4-14#88
+  - 4-15#89
+  - 4-16#90
+  - 4-17#91
+  - 4-18#92
+  - 4-19#93
+  - 4-20#94
+  - 4-21#95
+  - 4-22#96
+  - 4-23#97
+  - 4-24#98
+  - 5-1#99
+  - 5-2#100
+  - 5-3#101
+  - 5-4#102
+  - 5-5#103
+  - 5-6#104
+  - 5-7#105
+  - 5-8#106
+  - 5-9#107
+  - 5-10#108
+  - 5-11#109
+  - 5-12#110
+  - 5-13#111
+  - 5-14#112
+  - 6-1#113
+  - 6-2#114
+  - 6-3#115
+  - 6-4#116
+  - 6-5#117
+  - 6-6#118
+  - 6-7#119
+  - 6-8#120
+  - 6-9#121
+  - 6-10#122
+  - 6-11#123
+  - 6-12#124
+  - 6-13#125
+  - 6-14#126
+  - 6-15#127
+  - 6-16#128
+  - 6-17#129
+  - 6-18#130
+  - 7-1#131
+  - 7-2#132
+  - 7-3#133
+  - 7-4#134
+  - 7-5#135
+  - 7-6#136
+  - 8-1#137
+  - 8-2#138
+  - 8-3#139
+  - 8-4#140
+  - 8-5#141
+  - 8-6#142
+  - 8-7#143
+  - 8-8#144
+  - 8-9#145
+  - 8-10#146
+  - 8-11#147
+  - 8-12#148
+  - 8-13#149
+  - 8-14#150
+  - 8-15#151
+  - 8-16#152
+  - 8-17#153
+  - 8-18#154
+  - 8-19#155
+  - 8-20#156
+  - 8-21#157
+  - 8-22#158
+  - 8-23#159
+  - 8-24#160
+  - 8-25#161
+  - 8-26#162
+  - 8-27#163
+  - 8-28#164
+  - 8-29#165
+  - 8-30#166
+  - 8-31#167
+  - 8-32#168
+  - 8-33#169
+  - 8-34#170
+  - 8-35#171
+  - 8-36#172
+  - 9-1#173
+  - 9-2#174
+  - 9-3#175
+  - 9-4#176
+  - 9-5#177
+  - 9-6#178
+  - 9-7#179
+  - 9-8#180
+  - 10-1#181
+  - 10-2#182
+  - 10-3#183
+  - 10-4#184
+  - 10-5#185
+  - 10-6#186
+  - 10-7#187
+  - 10-8#188
+  - 10-9#189
+  - 10-10#190
+  - 11-1#191
+  - 11-2#192
+  - 11-3#193
+  - 11-4#194
+  - 11-5#195
+  - 11-6#196
+  - 11-7#197
+  - 11-8#198
+  - 11-9#199
+  - 11-10#200
+  - 11-11#201
+  - 11-12#202
+  - 11-13#203
+  - 11-14#204
+  - 11-15#205
+  - 11-16#206
+  - 11-17#207
+  - 11-18#208
+  - 12-1#209
+  - 12-2#210
+  - 12-3#211
+  - 12-4#212
+  - 12-5#213
+  - 12-6#214
+  - 12-7#215
+  - 12-8#216
+  - 12-9#217
+  - 12-10#218
+  - 12-11#219
+  - 12-12#220
+  - 12-13#221
+  - 12-14#222
+  - 12-15#223
+  - 12-16#224
+  - 12-17#225
+  - 12-18#226
+  - 12-19#227
+  - 12-20#228
+  - 12-21#229
+  - 12-22#230
+  - 12-23#231
+  - 12-24#232
+  - 12-25#233
+  - 12-26#234
+  - 12-27#235
+  - 12-28#236
+  - 13-1#237
+  - 13-2#238
+  - 13-3#239
+  - 13-4#240
+  - 13-5#241
+  - 13-6#242
+  - 13-7#243
+  - 13-8#244
+  - 14-1#245
+  - 14-2#246
+  - 14-3#247
+  - 14-4#248
+  - 14-5#249
+  - 14-6#250
+  - 14-7#251
+  - 14-8#252
+  - 14-9#253
+  - 14-10#254
+  - 14-11#255
+  - 14-12#256
+  - 14-13#257
+  - 14-14#258
+  - 15-1#259
+  - 15-2#260
+  - 15-3#261
+  - 15-4#262
+  - 15-5#263
+  - 15-6#264
+  - 15-7#265
+  - 15-8#266
+  - 15-9#267
+  - 15-10#268
+  - 15-11#269
+  - 15-12#270
+  - 15-13#271
+  - 15-14#272
+  - 15-15#273
+  - 15-16#274
+  - 15-17#275
+  - 15-18#276
+  - 15-19#277
+  - 15-20#278
+  - 15-21#279
+  - 15-22#280
+  - 15-23#281
+  - 15-24#282
+  - 15-25#283
+  - 15-26#284
+  - 15-27#285
+  - 15-28#286
+  - 15-29#287
+  - 15-30#288
+  - 15-31#289
+  - 15-32#290
+  - 16-1#291
+  - 16-2#292
+  - 16-3#293
+  - 16-4#294
+  - 16-5#295
+  - 16-6#296
+  - 16-7#297
+  - 16-8#298
+  - 16-9#299
+  - 16-10#300
+  - 16-11#301
+  - 16-12#302
+  - 16-13#303
+  - 16-14#304
+  - 17-1#305
+  - 17-2#306
+  - 17-3#307
+  - 17-4#308
+  - 17-5#309
+  - 17-6#310
+  - 17-7#311
+  - 17-8#312
+  - 17-9#313
+  - 17-10#314
+  - 17-11#315
+  - 17-12#316
+  - 17-13#317
+  - 17-14#318
+  - 17-15#319
+  - 17-16#320
+  - 17-17#321
+  - 17-18#322
+  - G-1#323
+  - G-2#324
+  - G-3#325
+  - G-4#326
+  - G-5#327
+  - G-6#328
+  - G-7#329
+  - G-8#330
+  - G-9#331
+  - G-10#332
+  - G-11#333
+  - G-12#334
+  - G-13#335
+  - G-14#336
+  - G-15#337
+  - G-16#338
+  - G-17#339
+  - G-18#340
+  - G-19#341
+  - G-20#342
+  - I-1#343
+  - I-2#344
+  - I-3#345
+  - I-4#346
+  - I-5#347
+  - I-6#348#348
