--- a/references/phak.yml
+++ b/references/phak.yml
@@ -1,511 +1,511 @@
-- slug: PHAK
-  title: Pilot's Handbook of Aeronautical Knowledge
-  url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/phak/media/pilot_handbook.pdf'
-  sections:
-    - 1-1#18
-    - 1-2#19
-    - 1-3#20
-    - 1-4#21
-    - 1-5#22
-    - 1-6#23
-    - 1-7#24
-    - 1-8#25
-    - 1-9#26
-    - 1-10#27
-    - 1-11#28
-    - 1-12#29
-    - 1-13#30
-    - 1-14#31
-    - 1-15#32
-    - 1-16#33
-    - 1-17#34
-    - 1-18#35
-    - 1-19#36
-    - 1-20#37
-    - 1-21#38
-    - 1-22#39
-    - 1-23#40
-    - 1-24#41
-    - 2-1#42
-    - 2-2#43
-    - 2-3#44
-    - 2-4#45
-    - 2-5#46
-    - 2-6#47
-    - 2-7#48
-    - 2-8#49
-    - 2-9#50
-    - 2-10#51
-    - 2-11#52
-    - 2-12#53
-    - 2-13#54
-    - 2-14#55
-    - 2-15#56
-    - 2-16#57
-    - 2-17#58
-    - 2-18#59
-    - 2-19#60
-    - 2-20#61
-    - 2-21#62
-    - 2-22#63
-    - 2-23#64
-    - 2-24#65
-    - 2-25#66
-    - 2-26#67
-    - 2-27#68
-    - 2-28#69
-    - 2-29#70
-    - 2-30#71
-    - 2-31#72
-    - 2-32#73
-    - 3-1#74
-    - 3-2#75
-    - 3-3#76
-    - 3-4#77
-    - 3-5#78
-    - 3-6#79
-    - 3-7#80
-    - 3-8#81
-    - 3-9#82
-    - 3-10#83
-    - 3-11#84
-    - 3-12#85
-    - 3-13#86
-    - 3-14#87
-    - 3-15#88
-    - 3-16#89
-    - 4-1#90
-    - 4-2#91
-    - 4-3#92
-    - 4-4#93
-    - 4-5#94
-    - 4-6#95
-    - 4-7#96
-    - 4-8#97
-    - 4-9#98
-    - 4-10#99
-    - 5-1#100
-    - 5-2#101
-    - 5-3#102
-    - 5-4#103
-    - 5-5#104
-    - 5-6#105
-    - 5-7#106
-    - 5-8#107
-    - 5-9#108
-    - 5-10#109
-    - 5-11#110
-    - 5-12#111
-    - 5-13#112
-    - 5-14#113
-    - 5-15#114
-    - 5-16#115
-    - 5-17#116
-    - 5-18#117
-    - 5-19#118
-    - 5-20#119
-    - 5-21#120
-    - 5-22#121
-    - 5-23#122
-    - 5-24#123
-    - 5-25#124
-    - 5-26#125
-    - 5-27#126
-    - 5-28#127
-    - 5-29#128
-    - 5-30#129
-    - 5-31#130
-    - 5-32#131
-    - 5-33#132
-    - 5-34#133
-    - 5-35#134
-    - 5-36#135
-    - 5-37#136
-    - 5-38#137
-    - 5-39#138
-    - 5-40#139
-    - 5-41#140
-    - 5-42#141
-    - 5-43#142
-    - 5-44#143
-    - 5-45#144
-    - 5-46#145
-    - 5-47#146
-    - 5-48#147
-    - 5-49#148
-    - 5-50#149
-    - 5-51#150
-    - 6-1#151
-    - 6-2#152
-    - 6-3#153
-    - 6-4#154
-    - 6-5#155
-    - 6-6#156
-    - 6-7#157
-    - 6-8#158
-    - 6-9#159
-    - 6-10#160
-    - 6-11#161
-    - 6-12#162
-    - 7-1#163
-    - 7-2#164
-    - 7-3#165
-    - 7-4#166
-    - 7-5#167
-    - 7-6#168
-    - 7-7#169
-    - 7-8#170
-    - 7-9#171
-    - 7-10#172
-    - 7-11#173
-    - 7-12#174
-    - 7-13#175
-    - 7-14#176
-    - 7-15#177
-    - 7-16#178
-    - 7-17#179
-    - 7-18#180
-    - 7-19#181
-    - 7-20#182
-    - 7-21#183
-    - 7-22#184
-    - 7-23#185
-    - 7-24#186
-    - 7-25#187
-    - 7-26#188
-    - 7-27#189
-    - 7-28#190
-    - 7-29#191
-    - 7-30#192
-    - 7-31#193
-    - 7-32#194
-    - 7-33#195
-    - 7-34#196
-    - 7-35#197
-    - 7-36#198
-    - 7-37#199
-    - 7-38#200
-    - 7-39#201
-    - 7-40#202
-    - 7-41#203
-    - 7-42#204
-    - 8-1#205
-    - 8-2#206
-    - 8-3#207
-    - 8-4#208
-    - 8-5#209
-    - 8-6#210
-    - 8-7#211
-    - 8-8#212
-    - 8-9#213
-    - 8-10#214
-    - 8-11#215
-    - 8-12#216
-    - 8-13#217
-    - 8-14#218
-    - 8-15#219
-    - 8-16#220
-    - 8-17#221
-    - 8-18#222
-    - 8-19#223
-    - 8-20#224
-    - 8-21#225
-    - 8-22#226
-    - 8-23#227
-    - 8-24#228
-    - 8-25#229
-    - 8-26#230
-    - 8-27#231
-    - 8-28#232
-    - 9-1#233
-    - 9-2#234
-    - 9-3#235
-    - 9-4#236
-    - 9-5#237
-    - 9-6#238
-    - 9-7#239
-    - 9-8#240
-    - 9-9#241
-    - 9-10#242
-    - 9-11#243
-    - 9-12#244
-    - 9-13#245
-    - 9-14#246
-    - 10-1#247
-    - 10-2#248
-    - 10-3#249
-    - 10-4#250
-    - 10-5#251
-    - 10-6#252
-    - 10-7#253
-    - 10-8#254
-    - 10-9#255
-    - 10-10#256
-    - 10-11#257
-    - 10-12#258
-    - 11-1#259
-    - 11-2#260
-    - 11-3#261
-    - 11-4#262
-    - 11-5#263
-    - 11-6#264
-    - 11-7#265
-    - 11-8#266
-    - 11-9#267
-    - 11-10#268
-    - 11-11#269
-    - 11-12#270
-    - 11-13#271
-    - 11-14#272
-    - 11-15#273
-    - 11-16#274
-    - 11-17#275
-    - 11-18#276
-    - 11-19#277
-    - 11-20#278
-    - 11-21#279
-    - 11-22#280
-    - 11-23#281
-    - 11-24#282
-    - 11-25#283
-    - 11-26#284
-    - 11-27#285
-    - 11-28#286
-    - 12-1#287
-    - 12-2#288
-    - 12-3#289
-    - 12-4#290
-    - 12-5#291
-    - 12-6#292
-    - 12-7#293
-    - 12-8#294
-    - 12-9#295
-    - 12-10#296
-    - 12-11#297
-    - 12-12#298
-    - 12-13#299
-    - 12-14#300
-    - 12-15#301
-    - 12-16#302
-    - 12-17#303
-    - 12-18#304
-    - 12-19#305
-    - 12-20#306
-    - 12-21#307
-    - 12-22#308
-    - 12-23#309
-    - 12-24#310
-    - 12-25#311
-    - 12-26#312
-    - 13-1#313
-    - 13-2#314
-    - 13-3#315
-    - 13-4#316
-    - 13-5#317
-    - 13-6#318
-    - 13-7#319
-    - 13-8#320
-    - 13-9#321
-    - 13-10#322
-    - 13-11#323
-    - 13-12#324
-    - 13-13#325
-    - 13-14#326
-    - 13-15#327
-    - 13-16#328
-    - 13-17#329
-    - 13-18#330
-    - 13-19#331
-    - 13-20#332
-    - 13-21#333
-    - 13-22#334
-    - 13-23#335
-    - 13-24#336
-    - 14-1#337
-    - 14-2#338
-    - 14-3#339
-    - 14-4#340
-    - 14-5#341
-    - 14-6#342
-    - 14-7#343
-    - 14-8#344
-    - 14-9#345
-    - 14-10#346
-    - 14-11#347
-    - 14-12#348
-    - 14-13#349
-    - 14-14#350
-    - 14-15#351
-    - 14-16#352
-    - 14-17#353
-    - 14-18#354
-    - 14-19#355
-    - 14-20#356
-    - 14-21#357
-    - 14-22#358
-    - 14-23#359
-    - 14-24#360
-    - 14-25#361
-    - 14-26#362
-    - 14-27#363
-    - 14-28#364
-    - 14-29#365
-    - 14-30#366
-    - 14-31#367
-    - 14-32#368
-    - 14-33#369
-    - 14-34#370
-    - 14-35#371
-    - 14-36#372
-    - 14-37#373
-    - 14-38#374
-    - 14-39#375
-    - 14-40#376
-    - 15-1#377
-    - 15-2#378
-    - 15-3#379
-    - 15-4#380
-    - 15-5#381
-    - 15-6#382
-    - 15-7#383
-    - 15-8#384
-    - 15-9#385
-    - 15-10#386
-    - 15-11#387
-    - 15-12#388
-    - 16-1#389
-    - 16-2#390
-    - 16-3#391
-    - 16-4#392
-    - 16-5#393
-    - 16-6#394
-    - 16-7#395
-    - 16-8#396
-    - 16-9#397
-    - 16-10#398
-    - 16-11#399
-    - 16-12#400
-    - 16-13#401
-    - 16-14#402
-    - 16-15#403
-    - 16-16#404
-    - 16-17#405
-    - 16-18#406
-    - 16-19#407
-    - 16-20#408
-    - 16-21#409
-    - 16-22#410
-    - 16-23#411
-    - 16-24#412
-    - 16-25#413
-    - 16-26#414
-    - 16-27#415
-    - 16-28#416
-    - 16-29#417
-    - 16-30#418
-    - 16-31#419
-    - 16-32#420
-    - 16-33#421
-    - 16-34#422
-    - 16-35#423
-    - 16-36#424
-    - 17-1#425
-    - 17-2#426
-    - 17-3#427
-    - 17-4#428
-    - 17-5#429
-    - 17-6#430
-    - 17-7#431
-    - 17-8#432
-    - 17-9#433
-    - 17-10#434
-    - 17-11#435
-    - 17-12#436
-    - 17-13#437
-    - 17-14#438
-    - 17-15#439
-    - 17-16#440
-    - 17-17#441
-    - 17-18#442
-    - 17-19#443
-    - 17-20#444
-    - 17-21#445
-    - 17-22#446
-    - 17-23#447
-    - 17-24#448
-    - 17-25#449
-    - 17-26#450
-    - 17-27#451
-    - 17-28#452
-    - 17-29#453
-    - 17-30#454
-    - A-1#455
-    - A-2#456
-    - A-3#457
-    - A-4#458
-    - A-5#459
-    - A-6#460
-    - A-7#461
-    - A-8#462
-    - B-1#463
-    - B-2#464
-    - B-3#465
-    - B-4#466
-    - B-5#467
-    - B-6#468
-    - B-7#469
-    - B-8#470
-    - B-9#471
-    - B-10#472
-    - B-11#473
-    - B-12#474
-    - C-1#475
-    - C-2#476
-    - C-3#477
-    - C-4#478
-    - G-1#479
-    - G-2#480
-    - G-3#481
-    - G-4#482
-    - G-5#483
-    - G-6#484
-    - G-7#485
-    - G-8#486
-    - G-9#487
-    - G-10#488
-    - G-11#489
-    - G-12#490
-    - G-13#491
-    - G-14#492
-    - G-15#493
-    - G-16#494
-    - G-17#495
-    - G-18#496
-    - G-19#497
-    - G-20#498
-    - G-21#499
-    - G-22#500
-    - G-23#501
-    - G-24#502
-    - G-25#503
-    - G-26#504
-    - G-27#505
-    - G-28#506
-    - G-29#507
-    - G-30#508
-    - G-31#509
-    - G-32#510
-    - G-33#511
-    - G-34#512
-    - G-35#513
-    - G-36#514
-    - I-1#515
-    - I-2#516
-    - I-3#517
-    - I-4#518
-    - I-5#519
-    - I-6#520
-    - I-7#521
-    - I-8#522
-    - I-9#523
-    - I-10#524#524
+slug: phak
+title: Pilot's Handbook of Aeronautical Knowledge
+url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/phak/media/pilot_handbook.pdf'
+sections:
+  - 1-1#18
+  - 1-2#19
+  - 1-3#20
+  - 1-4#21
+  - 1-5#22
+  - 1-6#23
+  - 1-7#24
+  - 1-8#25
+  - 1-9#26
+  - 1-10#27
+  - 1-11#28
+  - 1-12#29
+  - 1-13#30
+  - 1-14#31
+  - 1-15#32
+  - 1-16#33
+  - 1-17#34
+  - 1-18#35
+  - 1-19#36
+  - 1-20#37
+  - 1-21#38
+  - 1-22#39
+  - 1-23#40
+  - 1-24#41
+  - 2-1#42
+  - 2-2#43
+  - 2-3#44
+  - 2-4#45
+  - 2-5#46
+  - 2-6#47
+  - 2-7#48
+  - 2-8#49
+  - 2-9#50
+  - 2-10#51
+  - 2-11#52
+  - 2-12#53
+  - 2-13#54
+  - 2-14#55
+  - 2-15#56
+  - 2-16#57
+  - 2-17#58
+  - 2-18#59
+  - 2-19#60
+  - 2-20#61
+  - 2-21#62
+  - 2-22#63
+  - 2-23#64
+  - 2-24#65
+  - 2-25#66
+  - 2-26#67
+  - 2-27#68
+  - 2-28#69
+  - 2-29#70
+  - 2-30#71
+  - 2-31#72
+  - 2-32#73
+  - 3-1#74
+  - 3-2#75
+  - 3-3#76
+  - 3-4#77
+  - 3-5#78
+  - 3-6#79
+  - 3-7#80
+  - 3-8#81
+  - 3-9#82
+  - 3-10#83
+  - 3-11#84
+  - 3-12#85
+  - 3-13#86
+  - 3-14#87
+  - 3-15#88
+  - 3-16#89
+  - 4-1#90
+  - 4-2#91
+  - 4-3#92
+  - 4-4#93
+  - 4-5#94
+  - 4-6#95
+  - 4-7#96
+  - 4-8#97
+  - 4-9#98
+  - 4-10#99
+  - 5-1#100
+  - 5-2#101
+  - 5-3#102
+  - 5-4#103
+  - 5-5#104
+  - 5-6#105
+  - 5-7#106
+  - 5-8#107
+  - 5-9#108
+  - 5-10#109
+  - 5-11#110
+  - 5-12#111
+  - 5-13#112
+  - 5-14#113
+  - 5-15#114
+  - 5-16#115
+  - 5-17#116
+  - 5-18#117
+  - 5-19#118
+  - 5-20#119
+  - 5-21#120
+  - 5-22#121
+  - 5-23#122
+  - 5-24#123
+  - 5-25#124
+  - 5-26#125
+  - 5-27#126
+  - 5-28#127
+  - 5-29#128
+  - 5-30#129
+  - 5-31#130
+  - 5-32#131
+  - 5-33#132
+  - 5-34#133
+  - 5-35#134
+  - 5-36#135
+  - 5-37#136
+  - 5-38#137
+  - 5-39#138
+  - 5-40#139
+  - 5-41#140
+  - 5-42#141
+  - 5-43#142
+  - 5-44#143
+  - 5-45#144
+  - 5-46#145
+  - 5-47#146
+  - 5-48#147
+  - 5-49#148
+  - 5-50#149
+  - 5-51#150
+  - 6-1#151
+  - 6-2#152
+  - 6-3#153
+  - 6-4#154
+  - 6-5#155
+  - 6-6#156
+  - 6-7#157
+  - 6-8#158
+  - 6-9#159
+  - 6-10#160
+  - 6-11#161
+  - 6-12#162
+  - 7-1#163
+  - 7-2#164
+  - 7-3#165
+  - 7-4#166
+  - 7-5#167
+  - 7-6#168
+  - 7-7#169
+  - 7-8#170
+  - 7-9#171
+  - 7-10#172
+  - 7-11#173
+  - 7-12#174
+  - 7-13#175
+  - 7-14#176
+  - 7-15#177
+  - 7-16#178
+  - 7-17#179
+  - 7-18#180
+  - 7-19#181
+  - 7-20#182
+  - 7-21#183
+  - 7-22#184
+  - 7-23#185
+  - 7-24#186
+  - 7-25#187
+  - 7-26#188
+  - 7-27#189
+  - 7-28#190
+  - 7-29#191
+  - 7-30#192
+  - 7-31#193
+  - 7-32#194
+  - 7-33#195
+  - 7-34#196
+  - 7-35#197
+  - 7-36#198
+  - 7-37#199
+  - 7-38#200
+  - 7-39#201
+  - 7-40#202
+  - 7-41#203
+  - 7-42#204
+  - 8-1#205
+  - 8-2#206
+  - 8-3#207
+  - 8-4#208
+  - 8-5#209
+  - 8-6#210
+  - 8-7#211
+  - 8-8#212
+  - 8-9#213
+  - 8-10#214
+  - 8-11#215
+  - 8-12#216
+  - 8-13#217
+  - 8-14#218
+  - 8-15#219
+  - 8-16#220
+  - 8-17#221
+  - 8-18#222
+  - 8-19#223
+  - 8-20#224
+  - 8-21#225
+  - 8-22#226
+  - 8-23#227
+  - 8-24#228
+  - 8-25#229
+  - 8-26#230
+  - 8-27#231
+  - 8-28#232
+  - 9-1#233
+  - 9-2#234
+  - 9-3#235
+  - 9-4#236
+  - 9-5#237
+  - 9-6#238
+  - 9-7#239
+  - 9-8#240
+  - 9-9#241
+  - 9-10#242
+  - 9-11#243
+  - 9-12#244
+  - 9-13#245
+  - 9-14#246
+  - 10-1#247
+  - 10-2#248
+  - 10-3#249
+  - 10-4#250
+  - 10-5#251
+  - 10-6#252
+  - 10-7#253
+  - 10-8#254
+  - 10-9#255
+  - 10-10#256
+  - 10-11#257
+  - 10-12#258
+  - 11-1#259
+  - 11-2#260
+  - 11-3#261
+  - 11-4#262
+  - 11-5#263
+  - 11-6#264
+  - 11-7#265
+  - 11-8#266
+  - 11-9#267
+  - 11-10#268
+  - 11-11#269
+  - 11-12#270
+  - 11-13#271
+  - 11-14#272
+  - 11-15#273
+  - 11-16#274
+  - 11-17#275
+  - 11-18#276
+  - 11-19#277
+  - 11-20#278
+  - 11-21#279
+  - 11-22#280
+  - 11-23#281
+  - 11-24#282
+  - 11-25#283
+  - 11-26#284
+  - 11-27#285
+  - 11-28#286
+  - 12-1#287
+  - 12-2#288
+  - 12-3#289
+  - 12-4#290
+  - 12-5#291
+  - 12-6#292
+  - 12-7#293
+  - 12-8#294
+  - 12-9#295
+  - 12-10#296
+  - 12-11#297
+  - 12-12#298
+  - 12-13#299
+  - 12-14#300
+  - 12-15#301
+  - 12-16#302
+  - 12-17#303
+  - 12-18#304
+  - 12-19#305
+  - 12-20#306
+  - 12-21#307
+  - 12-22#308
+  - 12-23#309
+  - 12-24#310
+  - 12-25#311
+  - 12-26#312
+  - 13-1#313
+  - 13-2#314
+  - 13-3#315
+  - 13-4#316
+  - 13-5#317
+  - 13-6#318
+  - 13-7#319
+  - 13-8#320
+  - 13-9#321
+  - 13-10#322
+  - 13-11#323
+  - 13-12#324
+  - 13-13#325
+  - 13-14#326
+  - 13-15#327
+  - 13-16#328
+  - 13-17#329
+  - 13-18#330
+  - 13-19#331
+  - 13-20#332
+  - 13-21#333
+  - 13-22#334
+  - 13-23#335
+  - 13-24#336
+  - 14-1#337
+  - 14-2#338
+  - 14-3#339
+  - 14-4#340
+  - 14-5#341
+  - 14-6#342
+  - 14-7#343
+  - 14-8#344
+  - 14-9#345
+  - 14-10#346
+  - 14-11#347
+  - 14-12#348
+  - 14-13#349
+  - 14-14#350
+  - 14-15#351
+  - 14-16#352
+  - 14-17#353
+  - 14-18#354
+  - 14-19#355
+  - 14-20#356
+  - 14-21#357
+  - 14-22#358
+  - 14-23#359
+  - 14-24#360
+  - 14-25#361
+  - 14-26#362
+  - 14-27#363
+  - 14-28#364
+  - 14-29#365
+  - 14-30#366
+  - 14-31#367
+  - 14-32#368
+  - 14-33#369
+  - 14-34#370
+  - 14-35#371
+  - 14-36#372
+  - 14-37#373
+  - 14-38#374
+  - 14-39#375
+  - 14-40#376
+  - 15-1#377
+  - 15-2#378
+  - 15-3#379
+  - 15-4#380
+  - 15-5#381
+  - 15-6#382
+  - 15-7#383
+  - 15-8#384
+  - 15-9#385
+  - 15-10#386
+  - 15-11#387
+  - 15-12#388
+  - 16-1#389
+  - 16-2#390
+  - 16-3#391
+  - 16-4#392
+  - 16-5#393
+  - 16-6#394
+  - 16-7#395
+  - 16-8#396
+  - 16-9#397
+  - 16-10#398
+  - 16-11#399
+  - 16-12#400
+  - 16-13#401
+  - 16-14#402
+  - 16-15#403
+  - 16-16#404
+  - 16-17#405
+  - 16-18#406
+  - 16-19#407
+  - 16-20#408
+  - 16-21#409
+  - 16-22#410
+  - 16-23#411
+  - 16-24#412
+  - 16-25#413
+  - 16-26#414
+  - 16-27#415
+  - 16-28#416
+  - 16-29#417
+  - 16-30#418
+  - 16-31#419
+  - 16-32#420
+  - 16-33#421
+  - 16-34#422
+  - 16-35#423
+  - 16-36#424
+  - 17-1#425
+  - 17-2#426
+  - 17-3#427
+  - 17-4#428
+  - 17-5#429
+  - 17-6#430
+  - 17-7#431
+  - 17-8#432
+  - 17-9#433
+  - 17-10#434
+  - 17-11#435
+  - 17-12#436
+  - 17-13#437
+  - 17-14#438
+  - 17-15#439
+  - 17-16#440
+  - 17-17#441
+  - 17-18#442
+  - 17-19#443
+  - 17-20#444
+  - 17-21#445
+  - 17-22#446
+  - 17-23#447
+  - 17-24#448
+  - 17-25#449
+  - 17-26#450
+  - 17-27#451
+  - 17-28#452
+  - 17-29#453
+  - 17-30#454
+  - A-1#455
+  - A-2#456
+  - A-3#457
+  - A-4#458
+  - A-5#459
+  - A-6#460
+  - A-7#461
+  - A-8#462
+  - B-1#463
+  - B-2#464
+  - B-3#465
+  - B-4#466
+  - B-5#467
+  - B-6#468
+  - B-7#469
+  - B-8#470
+  - B-9#471
+  - B-10#472
+  - B-11#473
+  - B-12#474
+  - C-1#475
+  - C-2#476
+  - C-3#477
+  - C-4#478
+  - G-1#479
+  - G-2#480
+  - G-3#481
+  - G-4#482
+  - G-5#483
+  - G-6#484
+  - G-7#485
+  - G-8#486
+  - G-9#487
+  - G-10#488
+  - G-11#489
+  - G-12#490
+  - G-13#491
+  - G-14#492
+  - G-15#493
+  - G-16#494
+  - G-17#495
+  - G-18#496
+  - G-19#497
+  - G-20#498
+  - G-21#499
+  - G-22#500
+  - G-23#501
+  - G-24#502
+  - G-25#503
+  - G-26#504
+  - G-27#505
+  - G-28#506
+  - G-29#507
+  - G-30#508
+  - G-31#509
+  - G-32#510
+  - G-33#511
+  - G-34#512
+  - G-35#513
+  - G-36#514
+  - I-1#515
+  - I-2#516
+  - I-3#517
+  - I-4#518
+  - I-5#519
+  - I-6#520
+  - I-7#521
+  - I-8#522
+  - I-9#523
+  - I-10#524#524
