--- a/references/AIH.yml
+++ b/references/AIH.yml
@@ -1,6 +1,7 @@
 slug: aih
 title: Aviation Instructor's Handbook
 url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/aviation_instructors_handbook/media/FAA-H-8083-9A.pdf'
+document: FAA-H-8083-9A
 sections:
   - 1-1#15
   - 1-2#16
