--- a/references/phak.yml
+++ b/references/phak.yml
@@ -1,6 +1,7 @@
 slug: phak
 title: Pilot's Handbook of Aeronautical Knowledge
 url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/phak/media/pilot_handbook.pdf'
+document: FAA-H-8083-25B
 sections:
   - 1-1#18
   - 1-2#19
