--- a/references/afh.yml
+++ b/references/afh.yml
@@ -1,6 +1,7 @@
 slug: afh
 title: Airplane Flying Handbook
 url: 'https://www.faa.gov/regulations_policies/handbooks_manuals/aviation/airplane_handbook/media/airplane_flying_handbook.pdf'
+document: FAA-H-8083-3B
 sections:
   - 1-1#15
   - 1-2#16
